--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -19,6 +19,7 @@
     .cursor-pointer { cursor: pointer; }
   </style>
 </head>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <body class="bg-slate-900 text-slate-100 antialiased">
   <div class="max-w-6xl mx-auto p-6">
     <header class="flex items-center justify-between mb-6">
