--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Fantasy EFMO</title>
+  <link rel="icon" href="favicon.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .glass { background: linear-gradient(135deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02)); }
@@ -11,15 +12,14 @@
     .available { color: #fff; background: #10b981; padding: 2px 6px; border-radius: 4px; font-size: 0.75rem; }
     .doubt { color: #000; background: #facc15; padding: 2px 6px; border-radius: 4px; font-size: 0.75rem; }
     .score-badge { display: inline-block; min-width: 24px; text-align: center; padding: 2px 4px; border-radius: 4px; font-size: 0.75rem; font-weight: 500; margin-right: 2px; }
-    .score-red { background-color: #ff3200; color: #000; }
-    .score-gray { background-color: #d6d6d6; color: #000; }
-    .score-yellow { background-color: #ffff42; color: #000; }
-    .score-green { background-color: #23d750; color: #000; }
-    .score-blue { background-color: #4bffff; color: #000; }
+    .score-red { background-color: #ff3200; color: #fff; }
+    .score-gray { background-color: #d6d6d6; color: #fff; }
+    .score-yellow { background-color: #ffff42; color: #fff; }
+    .score-green { background-color: #23d750; color: #fff; }
+    .score-blue { background-color: #4bffff; color: #fff; }
     .cursor-pointer { cursor: pointer; }
   </style>
 </head>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <body class="bg-slate-900 text-slate-100 antialiased">
   <div class="max-w-6xl mx-auto p-6">
     <header class="flex items-center justify-between mb-6">
@@ -64,7 +64,13 @@
 
         <hr class="my-4 border-slate-700"/>
         <h3 class="font-semibold mb-2">Noticias / Lesiones</h3>
-        <div id="injuryFeed" class="space-y-3 text-sm text-slate-300"></div>
+        <div id="injuryFeed" class="space-y-3 text-sm text-slate-300">
+          <!-- Noticia/lesión de prueba -->
+          <div class="p-2 bg-slate-800 rounded text-sm">
+            <div class="font-medium">Jugador de prueba — Lesión</div>
+            <div class="text-slate-400 text-xs">Rotura muscular, 3 semanas</div>
+          </div>
+        </div>
       </section>
 
       <section class="lg:col-span-2">
@@ -99,8 +105,7 @@
       { id:1, name:'Iker Martínez', pos:'Portero', status:'available', performances:[
         {points:10, minutes:90, goals:0, assists:0, cards:0, comment:'Buen partido'},
         {points:12, minutes:90, goals:0, assists:0, cards:0, comment:''},
-        {points:10, minutes:90, goals:0, assists:0, cards:0, comment:'Excelente'},
-        {points:-2, minutes:45, goals:0, assists:0, cards:1, comment:'Mal partido'}
+        {points:10, minutes:90, goals:0, assists:0, cards:0, comment:'Excelente'}
       ]},
       { id:2, name:'Carlos Vega', pos:'Defensa', status:'doubt', performances:[
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:''},
@@ -111,7 +116,51 @@
         {points:14, minutes:90, goals:1, assists:1, cards:0, comment:'Muy activo'},
         {points:15, minutes:90, goals:1, assists:2, cards:0, comment:'Gran asistencia'},
         {points:16, minutes:90, goals:1, assists:1, cards:0, comment:''}
-      ]}
+      ]},
+      { id:4, name:'Jugador 4', pos:'Delantero', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:5, name:'Jugador 5', pos:'Defensa', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:6, name:'Jugador 6', pos:'Centrocampista', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:7, name:'Jugador 7', pos:'Portero', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:8, name:'Jugador 8', pos:'Delantero', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:9, name:'Jugador 9', pos:'Defensa', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:10, name:'Jugador 10', pos:'Centrocampista', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:11, name:'Jugador 11', pos:'Delantero', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:12, name:'Jugador 12', pos:'Defensa', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:13, name:'Jugador 13', pos:'Centrocampista', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:14, name:'Jugador 14', pos:'Portero', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:15, name:'Jugador 15', pos:'Delantero', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:16, name:'Jugador 16', pos:'Defensa', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:17, name:'Jugador 17', pos:'Centrocampista', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:18, name:'Jugador 18', pos:'Delantero', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:19, name:'Jugador 19', pos:'Defensa', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:20, name:'Jugador 20', pos:'Centrocampista', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:21, name:'Jugador 21', pos:'Portero', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:22, name:'Jugador 22', pos:'Delantero', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:23, name:'Jugador 23', pos:'Defensa', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:24, name:'Jugador 24', pos:'Centrocampista', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
+      { id:25, name:'Jugador 25', pos:'Delantero', status:'available', performances:[
+        {points:0, minutes:0, goals:0, assists:0, cards:0, comment:''}]}
     ];
 
     function renderScoreBadge(score){
@@ -143,34 +192,25 @@
       const grid=document.getElementById('gridView');
       const posFilter=document.getElementById('positionFilter').value;
       const statusFilter=document.getElementById('statusFilter').value;
-
+      const filtered=players.filter(p=>(posFilter==='all'||p.pos===posFilter)&&(statusFilter==='all'||(statusFilter==='available'?p.status==='available':statusFilter===p.status)));
       grid.innerHTML='';
-      const filtered = players.filter(p=>{
-        const posOk = posFilter==='all' || p.pos===posFilter;
-        const statusOk = statusFilter==='all' || p.status===statusFilter;
-        return posOk && statusOk;
-      });
-
       filtered.forEach(p=>{
-        const totals = calculateTotals(p.performances);
-        const lastThree = p.performances.slice(-3);
+        const totalPoints = calculateTotals(p.performances).points;
+        const lastThree = p.performances.slice(-3).map(x=>x.points);
         const card=document.createElement('div');
         card.className='p-3 bg-slate-800 rounded-lg cursor-pointer';
         card.setAttribute('data-id',p.id);
-        card.innerHTML=`
-          <div class='flex items-start justify-between'>
-            <div><div class='text-sm text-slate-400'>${p.pos}</div><div class='font-semibold'>${p.name}</div></div>
-            <div class='text-right'><div class='text-xs text-slate-400'>Puntos</div><div class='text-lg font-bold'>${totals.points}</div></div>
-          </div>
-          <div class='mt-3'>${lastThree.map(perf => renderScoreBadge(perf.points)).join(' ')}</div>
-          <div class='mt-2'>${renderStatusBadge(p)}</div>
-        `;
-        card.onclick = ()=>openModal(p.id);
+        card.innerHTML=`<div class='flex items-start justify-between'>
+          <div><div class='text-sm text-slate-400'>${p.pos}</div><div class='font-semibold'>${p.name}</div></div>
+          <div class='text-right'><div class='text-xs text-slate-400'>Puntos</div><div class='text-lg font-bold'>${totalPoints}</div></div>
+        </div>
+        <div class='mt-3'>${lastThree.map(renderScoreBadge).join(' ')}</div>
+        <div class='mt-2'>${renderStatusBadge(p)}</div>`;
+        card.onclick=()=>openModal(p.id);
         grid.appendChild(card);
       });
-
-      document.getElementById('playerCount').textContent = filtered.length;
-      document.getElementById('injuredCount').textContent = players.filter(p=>p.status==='injured').length;
+      document.getElementById('playerCount').textContent=players.length;
+      document.getElementById('injuredCount').textContent=players.filter(p=>p.status==='injured').length;
     }
 
     function openModal(id){
@@ -184,24 +224,21 @@
       document.getElementById('modalCards').textContent=totals.cards;
       document.getElementById('modalMatches').textContent=p.performances.length;
 
-      const perfDiv=document.getElementById('modalPerformances');
-      perfDiv.innerHTML='';
-      // Mostrar todas las jornadas
-      p.performances.forEach((perf,i)=>{
+      const perf=document.getElementById('modalPerformances'); perf.innerHTML='';
+      p.performances.forEach((perfItem,i)=>{
         const div=document.createElement('div');
         div.className='p-2 bg-slate-700 rounded flex justify-between items-center';
-        div.innerHTML=`<span>Jornada ${i+1}: ${renderScoreBadge(perf.points)}</span><span>${perf.comment}</span>`;
-        perfDiv.appendChild(div);
+        div.innerHTML=`<span>Jornada ${i+1}: ${renderScoreBadge(perfItem.points)}</span><span>${perfItem.comment}</span>`;
+        perf.appendChild(div);
       });
-
       document.getElementById('statModal').classList.remove('hidden');
       document.getElementById('statModal').classList.add('flex');
     }
 
-    document.getElementById('positionFilter').addEventListener('change', render);
-    document.getElementById('statusFilter').addEventListener('change', render);
+    document.getElementById('positionFilter').addEventListener('change',render);
+    document.getElementById('statusFilter').addEventListener('change',render);
     document.getElementById('closeModal').addEventListener('click',()=>{
-      document.getElementById('statModal').classList.add('hidden'); 
+      document.getElementById('statModal').classList.add('hidden');
       document.getElementById('statModal').classList.remove('flex');
     });
 
@@ -209,4 +246,3 @@
   </script>
 </body>
 </html>
-
