--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -106,7 +106,7 @@ const players = [
   { id:1, name:'Jorge Agudo', pos:'Portero', status:'available', performances:[
     {points:2, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:0, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:5, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+    {points:5, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:3, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   { id:2, name:'Carlos Vega', pos:'Defensa', status:'doubt', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:''}]},
