--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -239,8 +239,8 @@ function renderScoreBadge(score){
 }
 
 function renderStatusBadge(p){
-  if(p.status==='injured') return `<span class='injury'>Lesionado</span>`;
-  if(p.status==='doubt') return `<span class='doubt'>Duda</span>`;
+  if(p.status==='injured') return `<span class='Lesionado'>Lesionado</span>`;
+  if(p.status==='doubt') return `<span class='Duda'>Duda</span>`;
   return `<span class='available'>Disponible</span>`;
 }
 
