--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -132,98 +132,98 @@ const players = [
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:7, name:'Jugador 7', pos:'Portero', status:'OK', performances:[
+  { id:7, name:'Jacobo', pos:'Defensa', status:'OK', performances:[
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:8, name:'Rodri', pos:'Defensa', status:'OK', performances:[
+    {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:9, name:'Adriano', pos:'Defensa', status:'OK', performances:[
+    {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:10, name:'Á. Infante', pos:'Defensa', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:8, name:'Jugador 8', pos:'Delantero', status:'OK', performances:[
+  { id:11, name:'A. Molina', pos:'Atacante', status:'OK', performances:[
+    {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:12, name:'Lucas Lausín', pos:'Atacante', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:9, name:'Jugador 9', pos:'Defensa', status:'OK', performances:[
+  { id:13, name:'J. Zarcero', pos:'Defensa', status:'OK', performances:[
+    {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:14, name:'Kito', pos:'Centrocampista', status:'OK', performances:[
+    {points:6, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,3)'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', performances:[
+    {points:2, minutes:21, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:16, name:'Á. Brito', pos:'Centrocampista', status:'OK', performances:[
+    {points:7, minutes:72, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:17, name:'Pablo', pos:'Centrocampista', status:'OK', performances:[
+    {points:4, minutes:69, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,9)'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:10, name:'Jugador 10', pos:'Centrocampista', status:'OK', performances:[
+  { id:19, name:'Mario', pos:'Centrocampista', status:'Lesionado', performances:[
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', performances:[
+    {points:1, minutes:18, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:21, name:'Rodri de Castro', pos:'Atacante', status:'Lesionado', performances:[
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:22, name:'H. Panizo', pos:'Atacante', status:'OK', performances:[
+    {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:23, name:'Manu Medina', pos:'Atacante', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:11, name:'Jugador 11', pos:'Delantero', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+  { id:24, name:'Manu de Vicente', pos:'Atacante', status:'OK', performances:[
+    {points:1, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:12, name:'Jugador 12', pos:'Defensa', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:13, name:'Jugador 13', pos:'Centrocampista', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:14, name:'Jugador 14', pos:'Portero', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:15, name:'Jugador 15', pos:'Delantero', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:16, name:'Jugador 16', pos:'Defensa', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:17, name:'Jugador 17', pos:'Centrocampista', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:18, name:'Jugador 18', pos:'Delantero', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:19, name:'Jugador 19', pos:'Defensa', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:20, name:'Jugador 20', pos:'Centrocampista', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:21, name:'Jugador 21', pos:'Portero', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:22, name:'Jugador 22', pos:'Delantero', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:23, name:'Jugador 23', pos:'Defensa', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:24, name:'Jugador 24', pos:'Atacante', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:25, name:'Jugador 25', pos:'Atacante', status:'OK', performances:[
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+  { id:25, name:'S. Griñán', pos:'Atacante', status:'OK', performances:[
+    {points:3, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]}
 ];
