--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -67,8 +67,16 @@
       <h3 class="font-semibold mb-2">Noticias / Lesiones</h3>
       <div id="injuryFeed" class="space-y-3 text-sm text-slate-300">
         <div class="p-2 bg-slate-800 rounded text-sm">
-          <div class="font-medium">Jugador de prueba — Lesión</div>
-          <div class="text-slate-400 text-xs">Rotura muscular, 3 semanas</div>
+          <div class="font-medium">Duda: Álvaro</div>
+          <div class="text-slate-400 text-xs">Molestias, indeterminado</div>
+        </div>
+        <div class="p-2 bg-slate-800 rounded text-sm">
+          <div class="font-medium">Lesión: Mario</div>
+          <div class="text-slate-400 text-xs">Desconocido, 2 semanas</div>
+        </div>
+        <div class="p-2 bg-slate-800 rounded text-sm">
+          <div class="font-medium">Lesión: Rodri de Castro</div>
+          <div class="text-slate-400 text-xs">Desconocido, baja indeterminada</div>
         </div>
       </div>
     </section>
