--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -71,6 +71,10 @@
           <div class="text-slate-400 text-xs">Molestias, indeterminado</div>
         </div>
         <div class="p-2 bg-slate-800 rounded text-sm">
+          <div class="font-medium">Jornada 1</div>
+          <div class="text-slate-400 text-xs">Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'</div>
+        </div>
+        <div class="p-2 bg-slate-800 rounded text-sm">
           <div class="font-medium">Lesión: Mario</div>
           <div class="text-slate-400 text-xs">Desconocido, 2 semanas</div>
         </div>
