--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <div style="padding: 10px; float: left; width: 45%; text-align: center;">
   <a
-    href="FantasyEFMO.html"
+    href="FantasyEfmo.html"
     target="_blank">
     <img alt="Logo fantasy efmo"
          class="imagen"
