--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -68,7 +68,7 @@
       <div id="injuryFeed" class="space-y-3 text-sm text-slate-300">
         <div class="p-2 bg-slate-800 rounded text-sm">
           <div class="font-medium">Jornada 2</div>
-          <div class="text-slate-400 text-xs">E.F.M.O. Boadilla 'B' 1-3 F.B. Dptvo. Torrelodones</div>
+          <div class="text-slate-400 text-xs">E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones</div>
         </div>
         <div class="p-2 bg-slate-800 rounded text-sm">
           <div class="font-medium">Duda: Gabri </div>
@@ -123,12 +123,12 @@ const players = [
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:2, name:'Gabri', pos:'Portero', status:'OK', performances:[
+  { id:2, name:'Gabri', pos:'Portero', status:'Duda', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:3, name:'Álvaro', pos:'Portero', status:'Duda', performances:[
+  { id:3, name:'Álvaro', pos:'Portero', status:'OK', performances:[
     {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,5)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
