--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -67,6 +67,10 @@
       <h3 class="font-semibold mb-2">Noticias / Lesiones</h3>
       <div id="injuryFeed" class="space-y-3 text-sm text-slate-300">
         <div class="p-2 bg-slate-800 rounded text-sm">
+          <div class="font-medium">Duda: J. Agudo </div>
+          <div class="text-slate-400 text-xs">Molestias musculares en el cuádriceps, indeterminado</div>
+        </div>
+        <div class="p-2 bg-slate-800 rounded text-sm">
           <div class="font-medium">Jornada 2</div>
           <div class="text-slate-400 text-xs">E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones</div>
         </div>
@@ -118,9 +122,9 @@
 
 <script>
 const players = [
-  { id:1, name:'J. Agudo', pos:'Portero', status:'OK', performances:[
+  { id:1, name:'J. Agudo', pos:'Portero', status:'Duda', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:54, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:2, name:'Gabri', pos:'Portero', status:'Duda', performances:[
@@ -130,22 +134,22 @@ const players = [
   
   { id:3, name:'Álvaro', pos:'Portero', status:'OK', performances:[
     {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,5)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:36, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:4, name:'Luisja', pos:'Defensa', status:'OK', performances:[
     {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,2)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:5, name:'J. Martínez', pos:'Atacante', status:'OK', performances:[
     {points:3, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,7)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:6, name:'Rafa Crooke', pos:'Defensa', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:7, name:'Jacobo', pos:'Defensa', status:'OK', performances:[
@@ -155,92 +159,92 @@ const players = [
   
   { id:8, name:'Rodri', pos:'Defensa', status:'OK', performances:[
     {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:9, name:'Adriano', pos:'Defensa', status:'OK', performances:[
     {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:10, name:'Á. Infante', pos:'Defensa', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:11, name:'A. Molina', pos:'Atacante', status:'OK', performances:[
-    {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
-  
-  { id:12, name:'Lucas Lausín', pos:'Atacante', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:11, name:'A. Molina', pos:'Centrocampista', status:'OK', performances:[
+    {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'},
+    {points:null, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+  
+  { id:12, name:'Lucas Lausín', pos:'Defensa', status:'OK', performances:[
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+    {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:13, name:'J. Zarcero', pos:'Defensa', status:'OK', performances:[
     {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:14, name:'Kito', pos:'Centrocampista', status:'OK', performances:[
     {points:6, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,3)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', performances:[
     {points:2, minutes:21, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:16, name:'Á. Brito', pos:'Centrocampista', status:'OK', performances:[
     {points:7, minutes:72, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:75, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:17, name:'Pablo', pos:'Centrocampista', status:'OK', performances:[
     {points:4, minutes:69, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,9)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:19, name:'Mario', pos:'Centrocampista', status:'Lesionado', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', performances:[
     {points:1, minutes:18, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:21, name:'Rodri de Castro', pos:'Atacante', status:'Lesionado', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:22, name:'H. Panizo', pos:'Atacante', status:'OK', performances:[
     {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:23, name:'Manu Medina', pos:'Atacante', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:24, name:'Manu de Vicente', pos:'Atacante', status:'OK', performances:[
     {points:1, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:25, name:'S. Griñán', pos:'Atacante', status:'OK', performances:[
     {points:3, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+    {points:null, minutes:90, goals:1, assists:0, cards:1, comment:'🟨🟢 (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]}
 ];
 
